cabal-version: 2.4
name: gy
version: 0

common component
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -fno-warn-all-missed-specialisations
    -fno-warn-implicit-prelude
    -fno-warn-missed-specialisations
    -fno-warn-missing-import-lists
    -fno-warn-safe
    -fno-warn-unsafe

library
  import: component
  build-depends: gy-impl-base, gy-indef
  mixins: gy-indef (Gy.Indef as Gy) requires (Gy.Sig as Gy.Sig.Base)
  reexported-modules: Gy

library gy-impl-base
  import: component
  build-depends: base, stm
  exposed-modules: Gy.Sig.Base
  hs-source-dirs: src/gy-impl-base

library gy-impl-dejafu
  import: component
  build-depends:
    base,
    concurrency ^>= 1.11.0.0,
    dejafu ^>= 2.3.0.0,
    stm
  exposed-modules: Gy.Sig.Dejafu
  hs-source-dirs: src/gy-impl-dejafu

library gy-indef
  import: component
  build-depends: base, containers
  exposed-modules: Gy.Indef
  hs-source-dirs: src/gy-indef
  other-modules:
    Gy.Internal.Conc
    Gy.Internal.Debug
  signatures:
    Gy.Sig

test-suite tests
  import: component
  build-depends:
    base,
    concurrency,
    dejafu,
    gy-impl-dejafu,
    gy-indef,
  ghc-options: -threaded -O -with-rtsopts=-N
  hs-source-dirs: test
  main-is: Test.hs
  mixins: gy-indef (Gy.Indef as Gy) requires (Gy.Sig as Gy.Sig.Dejafu)
  type: exitcode-stdio-1.0
