cabal-version: 2.2

author: Mitchell Rosen
bug-reports: https://github.com/mitchellwrosen/ki/issues
category: Concurrency
copyright: Copyright (C) 2020 Mitchell Rosen
homepage: https://github.com/mitchellwrosen/ki
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: ki
stability: experimental
synopsis: A lightweight structured-concurrency library
version: 0.2.0.1

description:
  A lightweight structured-concurrency library.
  .
  Please read "Ki.Documentation" for an overview of how to use this library.

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/ki.git

common component
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    PartialTypeSignatures
    PatternSynonyms
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

library
  import: component
  build-depends:
    base >= 4.12.0.0 && < 4.16,
    containers,
    stm,
    unliftio-core
  exposed-modules:
    Ki,
    Ki.Internal
  hs-source-dirs: src
  other-modules:
    Ki.Internal.Duration
    Ki.Internal.Prelude
    Ki.Internal.Scope
    Ki.Internal.Thread
    Ki.Internal.Timeout

test-suite tests
  import: component
  build-depends:
    base,
    ki,
    stm,
  ghc-options: -rtsopts -threaded
  hs-source-dirs: test
  main-is: Tests.hs
  other-modules:
    TestUtils
  type: exitcode-stdio-1.0
