cabal-version: 2.4
name: trio
version: 0

library
  build-depends: trio-impl-base, trio-indef
  default-language: Haskell2010
  mixins: trio-indef (Trio) requires (Trio.Sig as Trio.Sig.Base)
  reexported-modules: Trio

library trio-impl-base
  build-depends: base, stm
  default-language: Haskell2010
  exposed-modules: Trio.Sig.Base
  hs-source-dirs: src/trio-impl-base

library trio-impl-dejafu
  build-depends: base, concurrency, dejafu, stm
  default-language: Haskell2010
  exposed-modules: Trio.Sig.Dejafu
  hs-source-dirs: src/trio-impl-dejafu

library trio-indef
  build-depends:
    base,
    containers,
  default-language: Haskell2010
  exposed-modules: Trio
  ghc-options: -Wall
  hs-source-dirs: src/trio-indef
  other-modules:
    Trio.Internal.Conc
    Trio.Internal.Debug
  signatures:
    Trio.Sig

test-suite tests
  build-depends:
    base,
    concurrency,
    dejafu,
    trio-impl-dejafu,
    trio-indef,
  default-language: Haskell2010
  ghc-options: -Wall -threaded -O -with-rtsopts=-N
  hs-source-dirs: test
  main-is: Test.hs
  mixins: trio-indef (Trio) requires (Trio.Sig as Trio.Sig.Dejafu)
  type: exitcode-stdio-1.0
