cabal-version: 3.0

author: Mitchell Rosen
bug-reports: https://github.com/mitchellwrosen/ki/issues
category: Concurrency
copyright: Copyright (C) 2020 Mitchell Rosen
description: A lightweight, structured concurrency library.
homepage: https://github.com/mitchellwrosen/ki
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: ki-mtl
stability: experimental
synopsis: A lightweight, structured concurrency library
tested-with: GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.1
version: 0

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/ki.git

library
  build-depends:
    base >= 4.12.0.0 && < 4.15,
    generic-lens,
    ki,
    mtl,
    unliftio-core
  default-language: Haskell2010
  exposed-modules: Ki.Mtl
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  hs-source-dirs: src
