cabal-version: 2.2

author: Mitchell Rosen
bug-reports: https://github.com/awkward-squad/ki/issues
category: Concurrency
copyright: Copyright (C) 2020-2022 Mitchell Rosen, Travis Staton
homepage: https://github.com/awkward-squad/ki
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
name: ki-unlifted
stability: stable
synopsis: A lightweight structured concurrency library
tested-with: GHC == 9.6.5, GHC == 9.8.2, GHC == 9.10.1
version: 1.0.0.2
x-revision: 1

description:
  A lightweight structured concurrency library.
  .
  For a specialised variant of this API that does not use
  @<https://hackage.haskell.org/package/unliftio-core unliftio-core>@, see
  @<https://hackage.haskell.org/package/ki ki>@.

extra-source-files:
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/awkward-squad/ki.git
  subdir: ki-unlifted

common component
  build-depends:
    base ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19 || ^>= 4.20,
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    PartialTypeSignatures
    PatternSynonyms
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations

library
  import: component
  build-depends:
    ki ^>= 1.0,
    unliftio-core ^>= 0.2,
  exposed-modules:
    Ki.Unlifted
  hs-source-dirs: src
