cabal-version: 2.2

author: Mitchell Rosen
bug-reports: https://github.com/awkward-squad/ki/issues
category: Concurrency
copyright: Copyright (C) 2020-2022 Mitchell Rosen, Travis Staton
homepage: https://github.com/awkward-squad/ki
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
name: ki
stability: experimental
synopsis: A lightweight structured concurrency library
version: 1.0.0

description:
  A lightweight structured concurrency library.
  .
  For a variant of this API generalized to
  @<https://hackage.haskell.org/package/unliftio-core/docs/Control-Monad-IO-Unlift.html#t:MonadUnliftIO MonadUnliftIO>@,
  see @<https://hackage.haskell.org/package/ki-unlifted ki-unlifted>@.
  .
  Remember to link your program with @-threaded@ to use the threaded runtime!

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/awkward-squad/ki.git

common component
  build-depends:
    base ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16,
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    PartialTypeSignatures
    PatternSynonyms
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: component
  build-depends:
    containers ^>= 0.6,
  exposed-modules:
    Ki
  hs-source-dirs: src
  other-modules:
    Ki.Internal.ByteCount
    Ki.Internal.Counter
    Ki.Internal.Prelude
    Ki.Internal.Scope
    Ki.Internal.Thread

test-suite tests
  import: component
  build-depends:
    ki,
    stm ^>= 2.5,
    tasty ^>= 1.4.2,
    tasty-hunit ^>= 0.10,
  ghc-options: -rtsopts -threaded
  hs-source-dirs: test
  main-is: Tests.hs
  type: exitcode-stdio-1.0
